Update memo.md